Align gred correctly in Board

--- a/src/index.css
+++ b/src/index.css
@@ -41,16 +41,20 @@ input:-webkit-autofill:active  {
     flex-direction: row;
     width: 100%;
     height: 90%;
+    border: 1px solid black;
 }
 
 .Board {
     display: grid;
     justify-content: space-evenly;
-    align-content: space-evenly;
+    align-content: flex-start;
     grid-template-columns: auto auto auto auto;
     grid-row-gap: 10px;
-    grid-column-gap: 10px;
+    grid-column-gap: 5px;
+    padding: 10px;
     width: 80%;
+    height: 100%;
+    overflow: auto;
     border: 1px solid black;
 }
 
@@ -67,7 +71,7 @@ input:-webkit-autofill:active  {
     flex-direction: column;
     overflow-y: auto;
     height: 500px;
-    width: 250px;
+    width: 275px;
     margin: 10px;
     border: 1px solid black;
 }
@@ -98,7 +102,6 @@ input:-webkit-autofill:active  {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
     width: 20%;
 }
 
